plugins/scanner/src/model/engine/clamav/clamav.rs

extern "C" {
    #[doc = " @brief Free an engine.\n\n Will lower the reference count on an engine. If the reference count hits\n zero, the engine will be freed.\n\n @param engine        A scan engine.\n @return cl_error_t   CL_SUCCESS if successful.\n @return cl_error_t   CL_ENULLARG null arguments were provided."]
    pub fn cl_engine_free(engine: *mut cl_engine) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Scan a file, given a filename.\n\n @param filename          Filepath of the file to be scanned.\n @param[out] virname      Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.\n @param[out] scanned      The number of bytes scanned.\n @param engine            The scanning engine.\n @param scanoptions       Scanning options.\n @return cl_error_t       CL_CLEAN, CL_VIRUS, or an error code if an error occured during the scan."]
    pub fn cl_scanfile(
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Scan a file, given a filename.\n\n This callback variant allows the caller to provide a context structure that caller provided callback functions can interpret.\n\n @param filename          Filepath of the file to be scanned.\n @param[out] virname      Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.\n @param[out] scanned      The number of bytes scanned.\n @param engine            The scanning engine.\n @param scanoptions       Scanning options.\n @param[in,out] context   An opaque context structure allowing the caller to record details about the sample being scanned.\n @return cl_error_t       CL_CLEAN, CL_VIRUS, or an error code if an error occured during the scan."]
    pub fn cl_scanfile_callback(
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Load the signature databases found at the path.\n\n @param path          May be a file or directory.\n @param engine        The engine to load the signatures into\n @param[out] signo    The number of signatures loaded\n @param dboptions     Database load bitflag field. See the CL_DB_* defines, above.\n @return cl_error_t"]
    pub fn cl_load(
        path: *const ::std::os::raw::c_char,
        engine: *mut cl_engine,
        signo: *mut ::std::os::raw::c_uint,
        dboptions: ::std::os::raw::c_uint,
    ) -> cl_error_t;
}
extern "C" {
    pub fn cl_strerror(clerror: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cl_fmap {
    _unused: [u8; 0],
}
pub type cl_fmap_t = cl_fmap;
extern "C" {
    #[doc = " @brief Open a map given a buffer.\n\n Open a map for scanning custom data, where the data is already in memory,\n either in the form of a buffer, a memory mapped file, etc.\n Note that the memory [start, start+len) must be the _entire_ file,\n you can't give it parts of a file and expect detection to work.\n\n @param start         Pointer to a buffer of data.\n @param len           Length in bytes of the data.\n @return cl_fmap_t*   A map representing the buffer."]
    pub fn cl_fmap_open_memory(start: *const ::std::os::raw::c_void, len: usize) -> *mut cl_fmap_t;
}
extern "C" {
    #[doc = " @brief Releases resources associated with the map.\n\n You should release any resources you hold only after (handles, maps) calling\n this function.\n\n @param map           Map to be closed."]
    pub fn cl_fmap_close(arg1: *mut cl_fmap_t);
}
extern "C" {
    #[doc = " @brief Scan custom data.\n\n @param map           Buffer to be scanned, in form of a cl_fmap_t.\n @param filename      Name of data origin. Does not need to be an actual\n                      file on disk. May be NULL if a name is not available.\n @param[out] virname  Pointer to receive the signature match name name if a\n                      signature matched.\n @param[out] scanned  Number of bytes scanned.\n @param engine        The scanning engine.\n @param scanoptions   The scanning options struct.\n @param context       An application-defined context struct, opaque to\n                      libclamav. May be used within your callback functions.\n @return cl_error_t   CL_CLEAN if no signature matched. CL_VIRUS if a\n                      signature matched. Another CL_E* error code if an\n                      error occured."]
    pub fn cl_scanmap_callback(
        map: *mut cl_fmap_t,
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t;
}
